--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <body>
         <nav>
             <ul>
-                <li>lifestyle</li>
-                <li>photodiary</li>
-                <li>music</li>
-                <li>travel</li>
+                <li><a href="#">lifestyle</a></li>
+                <li><a href="#">photodiary</a></li>
+                <li><a href="#">music</a></li>
+                <li><a href="#">travel</a></li>
             </ul>
         </nav>
         <article>
