--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>GoIT FE14 Homework 01 by Andrei Terentyev</title>
         <meta name="description" content="GoIT Homework 01, Andrei Terentyev">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
