--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wrapper">
         <header class="header-wrapper">
-            <div class="logo">MART</div>
+            <div class="logo"><a href="#">MART</a></div>
             <nav>
                 <ul class="top-menu">
                     <li><a href="#">Home</a></li>
@@ -25,69 +25,90 @@
             </nav>
         </header>
         <main>
-            <div class="main-wrapper clearfix">
-                <section>
-                    <h2 class="products">Featured Products</h2>
-                    <article class="item-wrapper">
-                        <img src="img/item1.png" alt="blue shirt">
+            <div class="main-wrapper">
+                <div class="featured clearfix">
+                    <h2 class="section-title">Featured Products</h2>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item1.png" alt="blue shirt">
+                        </div>
                         <div class="item-name">Blue Shirt</div>
                         <div class="item-price">26</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item2.png" alt="woman shirt">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item2.png" alt="woman shirt">
+                        </div>
                         <div class="item-name">Woman shirt</div>
                         <div class="item-price">26</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item3.png" alt="yellow tshirt">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+
+                            <img src="img/item3.png" alt="yellow tshirt">
+                        </div>
                         <div class="item-name">Yellow tshirt</div>
                         <div class="item-price">31</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item4.png" alt="cool lingerie">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item4.png" alt="cool lingerie">
+                        </div>
                         <div class="item-name">Cool lingerie</div>
                         <div class="item-price">56</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item5.png" alt="blue shirt">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item5.png" alt="blue shirt">
+                        </div>
                         <div class="item-name">Blue Shirt</div>
                         <div class="item-price">26</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item6.png" alt="woman shirt">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item6.png" alt="woman shirt">
+                        </div>
                         <div class="item-name">Woman shirt</div>
                         <div class="item-price">26</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item7.png" alt="yellow tshirt">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item7.png" alt="yellow tshirt">
+                        </div>
                         <div class="item-name">Yellow tshirt</div>
                         <div class="item-price">31</div>
-                    </article>
-                    <article class="item-wrapper">
-                        <img src="img/item8.png" alt="cool lingerie">
+                    </div>
+                    <div class="item-wrapper">
+                        <div class="img-wrapper">
+                            <img src="img/item8.png" alt="cool lingerie">
+                        </div>
                         <div class="item-name">Cool lingerie</div>
                         <div class="item-price">56</div>
-                    </article>
-                </section>
-            </div>
-            <div class="blog">
-                <h2 class="blog-title">Latest News</h2>
+                    </div>
+                </div>
+                <h2 class="section-title">Latest News</h2>
                 <article class="blog-post">
                     <img src="img/blogpost1.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
                     <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
+                        auctor a ornare</p>
                     <button class="readmore">Read More</button>
                 </article>
                 <article class="blog-post">
                     <img src="img/blogpost2.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
                     <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
+                        auctor a ornare</p>
                     <button class="readmore">Read More</button>
                 </article>
                 <article class="blog-post">
                     <img src="img/blogpost3.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
                     <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare</p>
+                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
+                        auctor a ornare</p>
                     <button class="readmore">Read More</button>
                 </article>
             </div>
