--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -86,31 +86,39 @@
                         <div class="item-price">56</div>
                     </div>
                 </div>
-                <h2 class="section-title">Latest News</h2>
-                <article class="blog-post">
-                    <img src="img/blogpost1.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                    <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
-                        auctor a ornare</p>
-                    <button class="readmore">Read More</button>
-                </article>
-                <article class="blog-post">
-                    <img src="img/blogpost2.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                    <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
-                        auctor a ornare</p>
-                    <button class="readmore">Read More</button>
-                </article>
-                <article class="blog-post">
-                    <img src="img/blogpost3.png" alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
-                    <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
-                    <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
-                        vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
-                        auctor a ornare</p>
-                    <button class="readmore">Read More</button>
-                </article>
+                <section>
+                    <h2 class="section-title">Latest News</h2>
+                    <article class="blog-post">
+                        <img src="img/blogpost1.png"
+                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
+                            tincidunt
+                            auctor a ornare</p>
+                        <button class="readmore">Read More</button>
+                    </article>
+                    <article class="blog-post">
+                        <img src="img/blogpost2.png"
+                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
+                            tincidunt
+                            auctor a ornare</p>
+                        <button class="readmore">Read More</button>
+                    </article>
+                    <article class="blog-post">
+                        <img src="img/blogpost3.png"
+                            alt="Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean">
+                        <h3 class="blogpost-title">Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean</h3>
+                        <p class="blogpost-exerpt">Nam nec tellus a odio tincidunt auc. Duis sed odio sit amet nibh
+                            vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio
+                            tincidunt
+                            auctor a ornare</p>
+                        <button class="readmore">Read More</button>
+                    </article>
+                </section>
             </div>
         </main>
     </div>
