--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -11,30 +11,30 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="header-wrapper">
-            <div class="logo"><a href="#">MART</a></div>
-            <nav>
-                <ul class="top-menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Page</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <div class="slider">
-                <div class="slidercontent">
-                    <span class="leftnav"></span>
-                    <span class="slidertitle">Affordable Paris Tours</span>
-                    <span class="slidersubtitle">city tours / tour tickets / tour guides</span>
-                    <span class="rightnav"></span>
-                </div>
+    <header class="header-wrapper">
+        <div class="logo"><a href="#">MART</a></div>
+        <nav>
+            <ul class="top-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Page</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="slider">
+            <span class="leftnav pe-7s-angle-left"></span>
+            <div class="slidercontent">
+                <span class="slidertitle">Affordable Paris Tours</span>
+                <span class="slidersubtitle">city tours / tour tickets / tour guides</span>
             </div>
-            <div class="main-wrapper">
+            <span class="rightnav pe-7s-angle-right"></span>
+        </div>
+
+        <!-- <div class="main-wrapper">
                 <div class="featured clearfix">
                     <h2 class="section-title">New Collection</h2>
                     <div class="item-wrapper">
@@ -67,11 +67,11 @@
                         <div class="item-price">56</div>
                     </div>
                 </div>
-            </div>
-        </main>
-        <footer>
-            <p>All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a></p>
-        </footer>
+            </div> -->
+    </main>
+    <footer>
+        <p>All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a></p>
+    </footer>
     </div>
 </body>
 
