--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -34,40 +34,64 @@
             <span class="rightnav pe-7s-angle-right"></span>
         </div>
 
-        <!-- <div class="main-wrapper">
-                <div class="featured clearfix">
-                    <h2 class="section-title">New Collection</h2>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item1.png" alt="blue shirt">
-                        </div>
-                        <div class="item-name">Blue TShirt</div>
-                        <div class="item-price">26</div>
+        <div class="main-wrapper">
+            <div class="newcollection clearfix">
+                <h2 class="section-title">New Collection</h2>
+                <div class="item-wrapper">
+                    <div class="img-wrapper">
+                        <img src="img/item1.png" alt="blue shirt">
                     </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item2.png" alt="woman shirt">
-                        </div>
-                        <div class="item-name">Woman shirt</div>
-                        <div class="item-price">26</div>
+                    <div class="item-menu">
+                        <span class="item-button pe-7s-like"></span>
+                        <span class="item-button pe-7s-shuffle"></span>
+                        <span class="item-button pe-7s-clock"></span>
+                        <span class="item-button addtocart pe-7s-cart"></span>
                     </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-
-                            <img src="img/item3.png" alt="yellow tshirt">
-                        </div>
-                        <div class="item-name">Yellow tshirt</div>
-                        <div class="item-price">31</div>
-                    </div>
-                    <div class="item-wrapper">
-                        <div class="img-wrapper">
-                            <img src="img/item4.png" alt="cool lingerie">
-                        </div>
-                        <div class="item-name">Cool lingerie</div>
-                        <div class="item-price">56</div>
-                    </div>
+                    <div class="item-name">Blue TShirt</div>
+                    <div class="item-price">26</div>
                 </div>
-            </div> -->
+                <div class="item-wrapper">
+                    <div class="img-wrapper">
+                        <img src="img/item2.png" alt="woman shirt">
+                    </div>
+                    <div class="item-menu">
+                        <span class="item-button pe-7s-like"></span>
+                        <span class="item-button pe-7s-shuffle"></span>
+                        <span class="item-button pe-7s-clock"></span>
+                        <span class="item-button addtocart pe-7s-cart"></span>
+
+                    </div>
+                    <div class="item-name">Woman shirt</div>
+                    <div class="item-price">26</div>
+                </div>
+                <div class="item-wrapper">
+                    <div class="img-wrapper">
+                        <img src="img/item3.png" alt="yellow tshirt">
+                    </div>
+                    <div class="item-menu">
+                        <span class="item-button pe-7s-like"></span>
+                        <span class="item-button pe-7s-shuffle"></span>
+                        <span class="item-button pe-7s-clock"></span>
+                        <span class="item-button addtocart pe-7s-cart"></span>
+
+                    </div>
+                    <div class="item-name">Yellow tshirt</div>
+                    <div class="item-price">31</div>
+                </div>
+                <div class="item-wrapper">
+                    <div class="img-wrapper">
+                        <img src="img/item4.png" alt="cool lingerie">
+                    </div>
+                    <div class="item-menu"> <span class="item-button pe-7s-like"></span>
+                        <span class="item-button pe-7s-shuffle"></span>
+                        <span class="item-button pe-7s-clock"></span>
+                        <span class="item-button addtocart pe-7s-cart"></span>
+                    </div>
+                    <div class="item-name">Cool lingerie</div>
+                    <div class="item-price">56</div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <p>All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a></p>
