--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -94,9 +94,10 @@
         </div>
     </main>
     <footer>
-        <p>All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a></p>
+        <div class="footer-wrapper">
+            All Rights Reserved &copy Dokan | Designed <a href="#" alt="ThemenGraph">ThemenGraph</a>
+        </div>
     </footer>
-    </div>
 </body>
 
 </html>
